==> Snabeldier/ABC_Project/apollo3_loramac_library/boards/Apollo3/rtc-board.c <==
#include <stdint.h>
#include <stdbool.h>
#include "timer.h"
#include "device.h"
#define  DAYS_IN_MONTH_CORRECTION_NORM              ( ( uint32_t )0x99AAA0 )
#define  DAYS_IN_MONTH_CORRECTION_LEAP              ( ( uint32_t )0x445550 )
#define DIVC( X, N )                                ( ( ( X ) + ( N ) -1 ) / ( N ) )
#define DAYS_IN_LEAP_YEAR                           ( ( uint32_t )  366U )
#define DAYS_IN_YEAR                                ( ( uint32_t )  365U )
#define SECONDS_IN_1DAY                             ( ( uint32_t )86400U )
#define SECONDS_IN_1HOUR                            ( ( uint32_t ) 3600U )
#define SECONDS_IN_1MINUTE                          ( ( uint32_t )   60U )
#define MINUTES_IN_1HOUR                            ( ( uint32_t )   60U )
#define HOURS_IN_1DAY                               ( ( uint32_t )   24U )
#define TM_SECONDS_IN_1DAY							84640000U	//seconds in 1 day in ticks (*100)
#define TM_SECONDS_IN_1HOUR							360000U		//seconds in 1 hour in ticks (*100)
#define TM_SECONDS_IN_1MINUTE						6000U		//seconds in 1 minute in ticks (*100)
#define MIN_ALARM_DELAY 							1

void RtcInit( void ){
	if(RtcInitialized == false){
		am_hal_rtc_time_t currentTime;
		currentTime.ui32Year = 23;
		currentTime.ui32Month = 1;
		currentTime.ui32DayOfMonth = 1;
		currentTime.ui32Hour = 0;
		currentTime.ui32Minute = 0;
		currentTime.ui32Second = 0;
		currentTime.ui32Hundredths = 0;
		currentTime.ui32Century = 0;
		currentTime.ui32Weekday = 0;
		
		am_hal_clkgen_control(AM_HAL_CLKGEN_CONTROL_XTAL_START, 0);
		am_hal_rtc_osc_select(AM_HAL_RTC_OSC_XT);		//select external OSC
		am_hal_rtc_osc_enable();
		am_hal_rtc_time_12hour(false);					//select 24 hour format
		am_hal_rtc_time_set(&currentTime);
	}
	
}

void RtcStopAlarm( void ){
	am_hal_rtc_int_disable(AM_HAL_RTC_INT_ALM);	//disable RTC alarm interrupt
	am_hal_rtc_int_clear(AM_HAL_RTC_INT_ALM);	//clear RTC alarm interrupt flag
}

void RtcStartAlarm( uint32_t timeout ){
	uint16_t rtcAlarmSubSeconds = 0;
    uint16_t rtcAlarmSeconds = 0;
    uint16_t rtcAlarmMinutes = 0;
    uint16_t rtcAlarmHours = 0;
    uint16_t rtcAlarmDays = 0;
	am_hal_rtc_time_t alarmTime;
	
	RtcSetTimerContext();		//update the timercontext
	
	RtcStopAlarm();
	rtcAlarmSubSeconds = (timeout%100);	// rest of the convertion to seconds equals the 100ths
	timeout = (timeout-rtcAlarmSubSeconds)/100;	//convert into seconds, minus the 100ths seconds
	
	//convert timeout ticks into 100th, seconds, minutes, hours and days
	rtcAlarmDays = RtcTimerContext.CalenderTime.ui32DayOfMonth;
	while( timeout >= SECONDS_IN_1DAY )
    {
        timeout -= SECONDS_IN_1DAY;
        rtcAlarmDays++;
    }
	rtcAlarmHours = RtcTimerContext.CalenderTime.ui32Hour;
	while( timeout >= SECONDS_IN_1HOUR )
    {
        timeout -= SECONDS_IN_1HOUR;
        rtcAlarmHours++;
    }
	rtcAlarmMinutes = RtcTimerContext.CalenderTime.ui32Minute;
	while( timeout >= SECONDS_IN_1MINUTE )
    {
        timeout -= SECONDS_IN_1MINUTE;
        rtcAlarmMinutes++;
    }
	rtcAlarmSeconds = RtcTimerContext.CalenderTime.ui32Second + timeout;
	
	//Correction for overflows
	while( rtcAlarmSeconds >= SECONDS_IN_1MINUTE )
    { 
        rtcAlarmSeconds -= SECONDS_IN_1MINUTE;
        rtcAlarmMinutes++;
    }

    while( rtcAlarmMinutes >= MINUTES_IN_1HOUR )
    {
        rtcAlarmMinutes -= MINUTES_IN_1HOUR;
        rtcAlarmHours++;
    }

    while( rtcAlarmHours >= HOURS_IN_1DAY )
    {
        rtcAlarmHours -= HOURS_IN_1DAY;
        rtcAlarmDays++;
    }

    if( RtcTimerContext.CalenderTime.ui32Year % 4 == 0 ) 
    {
        if( rtcAlarmDays > DaysInMonthLeapYear[RtcTimerContext.CalenderTime.ui32Month - 1] )			//-1 for shifted array representation
        {
            rtcAlarmDays = rtcAlarmDays % DaysInMonthLeapYear[RtcTimerContext.CalenderTime.ui32Month - 1];
        }
    }
    else
    {
        if( rtcAlarmDays > DaysInMonth[RtcTimerContext.CalenderTime.ui32Month - 1] )
        {   
            rtcAlarmDays = rtcAlarmDays % DaysInMonth[RtcTimerContext.CalenderTime.ui32Month - 1];
        }
    }
	alarmTime.ui32Hundredths = rtcAlarmSubSeconds;
	alarmTime.ui32Second = rtcAlarmSeconds;
	alarmTime.ui32Minute = rtcAlarmMinutes;
	alarmTime.ui32Hour = rtcAlarmHours;
	alarmTime.ui32DayOfMonth = rtcAlarmDays;
	alarmTime.ui32Century = RtcTimerContext.CalenderTime.ui32Century;
	alarmTime.ui32Weekday = RtcTimerContext.CalenderTime.ui32Weekday;
	alarmTime.ui32Year = RtcTimerContext.CalenderTime.ui32Year;
	alarmTime.ui32Month = RtcTimerContext.CalenderTime.ui32Month;	
	am_hal_rtc_int_enable(AM_HAL_RTC_INT_ALM);
	am_hal_interrupt_master_enable();
	NVIC_EnableIRQ(RTC_IRQn);
	am_hal_rtc_alarm_set(&alarmTime,AM_HAL_RTC_ALM_RPT_YR);
	//am_hal_rtc_int_set(AM_HAL_RTC_INT_ALM);
}

uint32_t RtcGetCalendarValue(am_hal_rtc_time_t* currentTime){
	uint32_t calendarValue = 0;
	uint32_t correction;
    uint32_t seconds;
	am_hal_rtc_time_get(currentTime);
	// Calculte amount of elapsed days (full year) since 01/01/2000
    seconds = DIVC( ( DAYS_IN_YEAR * 3 + DAYS_IN_LEAP_YEAR ) * currentTime->ui32Year , 4 );	//ceiling value for days 
	correction = ( ( currentTime->ui32Year % 4 ) == 0 ) ? DAYS_IN_MONTH_CORRECTION_LEAP : DAYS_IN_MONTH_CORRECTION_NORM;	//select correction factor
	seconds += ( DIVC( ( currentTime->ui32Month-1 ) * ( 30 + 31 ), 2 ) - ( ( ( correction >> ( ( currentTime->ui32Month - 1 ) * 2 ) ) & 0x03 ) ) );
	seconds += ( currentTime->ui32DayOfMonth -1 );
	// Convert from days to seconds
    seconds *= SECONDS_IN_1DAY;
	seconds += currentTime->ui32Hour * SECONDS_IN_1HOUR;	//add hours of current day
	seconds += currentTime->ui32Minute * SECONDS_IN_1MINUTE;	//add minutes of current hour
	seconds += currentTime->ui32Second;						//add current seconds
	
	calendarValue = seconds*100;	//convert the seconds to timerticks(apollo rtc uses 100 Hz clock)
	return calendarValue;
}

TimerTime_t RtcTempCompensation( TimerTime_t period, float temperature ){
	// The drift equation of a tuning fork crystal over temperature is
    //
    //   delta_f / f_0 = k * (T - T_0) ^ 2
    //
    // As the crystal is external to the module, typical values range
    // from 0.03 to 0.04.  For the ASB06-32768, k is -0.03 nominal and T_0 is
    // at 25C nominal.
    float T_0 = 25.0f;
    float k   = -0.034f;
    float dev = 0.0f;

    dev = k * (temperature - T_0) * (temperature - T_0);

    // for component accuracy in the ppb range, change
    // the divisor to 1.0e9f
    float correction = ((float)period * dev) / 1.0e6f;

    // This would never happen practically, but for the sake of
    // mathematical correctness we should use a signed integer to
    // accommodate negative value correction
    int32_t corrected_period = (int32_t)period + round(correction);

    // re-cast the value back to uint32_t (TimerTime_t)
    return (TimerTime_t)corrected_period;
}
